@@ -15,7 +15,6 @@ namespace video
 }
 namespace gui
 {
-
 	//! GUI element displaying an image.
 	class IGUIImage : public IGUIElement
 	{
@@ -71,6 +70,14 @@ namespace gui
 
 		//! Get drawing-area restrictions.
 		virtual core::rect<f32> getDrawBounds() const = 0;
+
+		//! Sets whether to draw a background color (EGDC_3D_DARK_SHADOW) when no texture is set
+		/** By default it's enabled */
+		virtual void setDrawBackground(bool draw) = 0;
+
+		//! Checks if a background is drawn when no texture is set
+		/** \return true if background drawing is enabled, false otherwise */
+		virtual bool isDrawBackgroundEnabled() const = 0;
 	};
 
 
